# bo

./: CHANGELOG.md  CMakeLists.txt  README.md  wip.md
bo_app/: CMakeLists.txt
bo_app/src/: main.c
cmake/: BOConfig.cmake.in
include/bo/: bo.h
libbo/: CMakeLists.txt  wip.md
libbo/build-tools/: .gitignore  build_character_flags.c  build_types_table.c
libbo/include/bo/: bo.h
libbo/src/: bo.l  bo.y  bo_buffer.h  bo_internal.h  character_flags.h  library.c  parser.c
libbo/test/: CMakeLists.txt
libbo/test/cmake/: GoogleTest-CMakeLists.txt.in
libbo/test/src/: boolean.cpp  config.cpp  errors.cpp  float.cpp  input.cpp  output.cpp  span.cpp  string.cpp  test_helpers.cpp  test_helpers.h
src/: bo.l  bo.y  bo_internal.h  library.c  library_version.h.in
test/: CMakeLists.txt
test/src/: errors.cpp  input.cpp  output.cpp  test_helpers.cpp  test_helpers.h
